Se añade lectura de parámetros
Signed-off-by: Andrés Peña <lapc20081996@gmail.com>

--- a/version_2_files/Makefile
+++ b/version_2_files/Makefile
@@ -4,6 +4,7 @@ ORIGEN2 = animaciones
 ORIGEN3 = cicloprincipal
 ORIGEN4 = plugboard
 ORIGEN5 = romanosrotores
+ORIGEN6 = parametros
 
 # Reglas y targets de make
 all: build_asm
@@ -14,5 +15,6 @@ build_asm: $(ORIGEN1).asm $(ORIGEN2).asm $(ORIGEN3).asm $(ORIGEN4).asm
 	yasm -f elf64 -o $(ORIGEN3).o $(ORIGEN3).asm
 	yasm -f elf64 -o $(ORIGEN4).o $(ORIGEN4).asm
 	yasm -f elf64 -o $(ORIGEN5).o $(ORIGEN5).asm
-	ld -o progra $(ORIGEN4).o $(ORIGEN2).o $(ORIGEN3).o $(ORIGEN1).o $(ORIGEN5).o
+	yasm -f elf64 -o $(ORIGEN6).o $(ORIGEN6).asm
+	ld -o progra $(ORIGEN4).o $(ORIGEN2).o $(ORIGEN3).o $(ORIGEN1).o $(ORIGEN5).o $(ORIGEN6).o
 	# Mantener este orden plz
